# litprism

./: .env.example  .gitignore  LICENSE  Makefile  README.md  litprism-dev-guide.md  litprism-spec-v4.md  main.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
