[project]
name = "litprism"
version = "0.1.0"
description = "Search, screening, and audit layer for evidence synthesis"
readme = "README.md"
requires-python = ">=3.11"

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
